--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,6 +2,7 @@
   position: fixed;
   right: 0;
   left: 0;
+  z-index: 1;
 }
 
 header {
